test/compile_errors/err_panic_wrong_arg_count.w
//! expect-check-fail: panic() expects exactly one message argument

fn main:
    panic()
